webdev-final-project-files/css/main.css
/*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/**Globals**/
body {
    font-family: 'Merriweather', serif;
    color: #666666;
    line-height: 2em;
}

h2 {
    color: white;
    font-size: 3em;
}

h3 {
    color: #5f956d;
}

img {
    max-width: 100%;
    display: block;
}

a {
    text-decoration: none;
    color: white;
    background: #5f956d;
    padding: 10px 30px;
    font-size: .85em;
}

a:hover {
    background: #7ba686;
}


/**Main-nav**/
.nav {
    background: #ddb78a;
    list-style-type: none;
    padding: 1.5em;
    position: relative;
    padding-bottom: 5em;
}

.nav img {
    width: 175px;
    padding: 1em;
    position: absolute;
    top: 5px;
    left: 5px;
}

.nav li {
    padding: 2px;
    display: inline;
}

.nav ul {
    position: absolute;
    right: 10px;
}

.nav a {
    text-decoration: none;
    color: white;
    text-transform: uppercase;
    font-size: .8em;
    background: none;
}

.nav .button {
    border: 2px solid white;
    padding: 10px 20px;
    border-radius: 20px;
}

.nav .button:hover {
    background: white;
    color: black;
}

/**Header**/
.header {
    position: relative;
    padding: 0;
    margin: 0;
}

.header__photo {
    position: relative;
    z-index: -10;
    display: block;
    width: 100%;
    height: 500px;
    margin: 0;
}

.header__content {
    margin-top: 50px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    text-align: center;
    color: white;
}

.header h1 {
    font-size: 3em;
}

.header h2 {
    text-transform: uppercase;
    font-size: .8em;
}

/**About our farm section**/
.about {
    background: #f1f1f2;
    padding: 5em;
}

.about__content {
    text-align: center;
    margin-left: 4em;
    margin-right: 4em;
}

.about h2 {
    color: #5f956d;
    font-size: 2em;
}

/**Products section**/
.sections {
    position: relative;
}


.sections__image {
    position: relative;
    z-index: -100;
    display: block;
    width: 100%;
    height: 500px;
    margin: 0;
}

.sections__title {
    position: absolute;
    top: 4em;
    left: 50%;
    top: 12em;
    transform: translate(-50%,-50%);
    text-align: center;
    margin-top: 50px;
}

.sections__content {
    text-align: center;
    margin-left: 4em;
    margin-right: 4em;
    padding: 5em;
}

.product-thumb {
    width: 27%;
    float: left;
    padding: 1em;
    margin-bottom: 5em;
}

.product-thumb p {
    padding-bottom: 20px;
}

.clear {
    clear: both;
    margin-left: 14em;
    margin-right: 8em;
}

/**Farm section**/
.top-row {
    width: 40%;
    padding: 1em;
    display: inline;
}

.bottom-row {
    width: 25%;
    padding: 1em;
    display: inline;
}

/**Team section**/
.wrapped-photo-caption {
    width: 30%;
    float: left;
    padding: 2em;
}

.wrapped-text {
    text-align: left;
}

/**Contact section**/
.content-left {
    text-align: left;
    width: 50%;
    float: left;
    margin: 0;
    padding-right: 2em;
}
.sidebar {
    width: 40%;
    float: right;
    margin: 0;
    padding: 0;
    text-align: left;
}

.newsletter {
    clear: both;
    text-align: center;
    padding-top: 6em;
}

/**Footer**/
.nav2 {
    margin-top: 3em;
    margin-left: 6em;
    margin-right: 6em;
    border-bottom: 1px solid #cccccc;
}

.nav2 a {
    text-decoration: underline;
    color: #666666;
    font-size: .8em;
    background: none;
}

.nav2 ul {
    list-style: none;
    padding-left: 0;
}

.table-container {
    display: table;
    border-spacing: 10px;
}

.tablerow {
    display: table-row;
}

.cell {
    display: table-cell;
    vertical-align: top;
    padding: 2em;
}

.copyright-and-credit {
    font-style: italic;
    clear: both;
    padding-top: 4em;
}

.copyright-and-credit a {
    color: #666666;
    text-decoration: underline;
    background: none;
    padding: 0;
}

.copyright-and-credit p {
    text-align: center;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    -webkit-clip-path: inset(50%);
    clip-path: inset(50%);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    -webkit-clip-path: none;
    clip-path: none;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

